Fixing the map spacing.

--- a/assets/css/scss/_maps.scss
+++ b/assets/css/scss/_maps.scss
@@ -1,3 +1,9 @@
+.lsx-map {
+	&.wp-block-group.hidden {
+		display: none;
+	}
+}
+
 .lsx-to-map-marker {
 	-webkit-box-align: start;
 	-ms-flex-align: start;
